# FerrumChess

./: Aronian.pgn  ArtificialIntelligence.cpp  ArtificialIntelligence.h  BishopController.cpp  BishopController.h  CMakeLists.txt  Color.h  Figure.h  FigureController.cpp  FigureController.h  GameController.cpp  GameController.h  Intelligence.h  KingController.cpp  KingController.h  KnightController.cpp  KnightController.h  PawnController.cpp  PawnController.h  QueenController.cpp  QueenController.h  RookController.cpp  RookController.h  Type.h  UserIntelligence.cpp  UserIntelligence.h  main.cpp  opening_book_creator.py
Database/: Mamedyarov.pgn
database/: Caruana.pgn  Nepomniachtchi.pgn  aggregate_openings.cpp  notation_to_moves.cpp  opening_book_creator.py
include/: ArtificialIntelligence.h  Color.h  Figure.h  GameController.h  Intelligence.h  Move.h  Type.h  UIController.h  UserIntelligence.h  constants.h
include/controllers/: BishopController.h  FigureController.h  KingController.h  KnightController.h  PawnController.h  QueenController.h  RookController.h
src/: ArtificialIntelligence.cpp  BishopController.cpp  FigureController.cpp  GameController.cpp  KingController.cpp  KnightController.cpp  PawnController.cpp  QueenController.cpp  RookController.cpp  UIController.cpp  UserIntelligence.cpp  main.cpp
src/controllers/: BishopController.cpp  FigureController.cpp  KingController.cpp  KnightController.cpp  PawnController.cpp  QueenController.cpp  RookController.cpp
